# prj-flagella-estimation

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.codex/: config.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: general.md
.github/workflows/: ci.yml  codex-review-gate.yml  (+1 more)
conf/: config.yaml  sim_swim.yaml
docs/: 00_overview.md  PHASE2.1.md  PROJECT_PLAN.md  ROADMAP.md  TASK_MAP.md  codex_prompt.md
prompts/: 00_project_context.md  01_repo_rules.md
schemas/: phase3_clip_metadata.schema.json
scripts/: 01_simulate_swimming.py  01_tracking_butt.py  02_detect_bac.py  03_train_evaluate.py  10_overlay_flagella.py  10_simulate_swimming.py  README.md  __init__.py  plot_motor_scale_collapse_heatmap.py  run_body_stiffness_sweep.py  run_motor_scale_sweep.py  run_phase_diagnostics.py  setup_git_hooks.sh
tests/: phase4_test_utils.py  test_body_stability.py  test_brownian.py  test_butt_estimator.py  test_debug_summary.py  test_detector.py  test_e2e_cli.py  test_features.py  test_flagella_count_behavior_dataset.py  test_forces.py  test_git.py  test_git_hooks.py  test_helix_axis.py  test_helix_retention_gate.py  test_hydro_rpy.py  test_model_builder.py  test_motor_forces.py  test_motor_scale_sweep.py  test_params.py  test_paths.py  test_phase2_6_dt_star_torque_heatmap.py  test_phase2_6_local_scale_mode_heatmap.py  test_phase2_6_torque_model_evaluation.py  test_phase2_7_bundling_sweep.py  test_phase2_82_hook_overstretch_heatmap.py  test_phase2_82_hook_overstretch_sweep.py  test_phase2_generic_multi_run.py  test_phase2_sweep_profiles.py  test_phase3_clip_metadata_schema.py  test_phase3_gt_passthrough_pipeline.py  test_phase4_baseline_classifier.py  test_phase4_clip_dataset_loader.py  test_phase4_dataset_freeze.py  test_phase4_learning_curve.py  test_plot_motor_scale_collapse_heatmap.py  test_render_state_and_projection.py  test_run_context.py  test_run_state_fixed.py  test_simulation.py  test_synthetic_tracking.py  (+1 more)
(+403 files in other folders)
